bushub overlapping css fixed (#57)
* bushub overlapping css fixed

* fixed align for non bus hub

--- a/assets/css/components/destinationBusStop.scss
+++ b/assets/css/components/destinationBusStop.scss
@@ -1,4 +1,9 @@
 .landscape {
+  .bushub {
+    .destination-bus-stop {
+      width: 612px;
+    }
+  }
   .destination-bus-stop {
     width: 693px;
     height: 225px;
