--- a/assets/css/components/nextBus.scss
+++ b/assets/css/components/nextBus.scss
@@ -1,10 +1,20 @@
 .landscape {
+  .bushub {
+    .next-bus {
+      width: 305px;
+    }
+  }
   .next-bus {
     color: #fff;
     height: 225px;
+    width: 352px;
     position: relative;
     display: flex;
     line-height: 225px;
+    margin-right: 18px;
+    padding: 0 30px;
+    align-items: center;
+    justify-content: space-between;
 
     .indicator {
       width: 10px;
@@ -57,25 +67,7 @@
     }
   }
 
-  .next-bus {
-    width: 353px;
-    margin-right: 18px;
-    padding: 0 30px;
-    align-items: center;
-    justify-content: space-between;
-
-    a label {
-      font-weight: bold;
-    }
-
-    svg {
-      height: 50px;
-    }
-
-    + .next-bus {
-      width: 356px;
-    }
-  }
+  
 }
 
 .portrait {
